--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Auido Player</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Auido Player</title>
 </head>
+
 <body>
-    
+  <div class="bg-img"></div>
+  <div class="container">
+    <div class="audio-player">
+      <div class="audio-player__image-window">
+        <h1 class="audio-player__song-title"></h1>
+      </div>
+      <div class="audio-player__controls">
+        <audio src="./assets/audio/Diplo, SIDEPIECE - On My Mind.mp3" preload="metadata"></audio>
+        <div class="audio-player__buttons">
+          <button class="audio-player__button play"><img src="./assets/buttons/play-button.png" alt="play"></button>
+          <button class="audio-player__button next"></button>
+          <button class="audio-player__button prev"></button>
+        </div>
+        <input type="range" class="audio-duration" value="0" step="any">
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
+
 </html>
