--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -17,13 +17,20 @@
         <h1 class="audio-player__song-title"></h1>
       </div>
       <div class="audio-player__controls">
+        <h3>Diplo, SIDEPIECE - On My Mind</h3>
         <audio src="./assets/audio/Diplo, SIDEPIECE - On My Mind.mp3" preload="metadata"></audio>
         <div class="audio-player__buttons">
           <button class="audio-player__button play"><img src="./assets/buttons/play-button.png" alt="play"></button>
-          <button class="audio-player__button next"></button>
-          <button class="audio-player__button prev"></button>
         </div>
-        <input type="range" class="audio-duration" value="0" step="any">
+        <div class="rangeInput">
+          <p class="rangeInput__currentTime">00:00</p>
+          <input type="range" class="audio-duration" value="0" step="any">
+          <p class="rageInput__endTime"></p>
+        </div>
+        <div class="change-buttons">
+          <button class="audio-player__button next"><img src="./assets/buttons/next.png" alt="next"></button>
+          <button class="audio-player__button prev"><img src="./assets/buttons/back.png" alt="previous"></button>
+        </div>
       </div>
     </div>
   </div>
