--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -25,7 +25,7 @@
         <div class="rangeInput">
           <p class="rangeInput__currentTime">00:00</p>
           <input type="range" class="audio-duration" value="0" step="any">
-          <p class="rageInput__endTime"></p>
+          <p class="rageInput__endTime">03:09</p>
         </div>
         <div class="change-buttons">
           <button class="audio-player__button next"><img src="./assets/buttons/next.png" alt="next"></button>
