--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="rangeInput">
           <p class="rangeInput__currentTime">00:00</p>
-          <input type="range" class="audio-duration" value="0" step="any">
+          <input type="range" class="audio-range" value="0" step="1" max="189">
           <p class="rageInput__endTime">03:09</p>
         </div>
         <div class="change-buttons">
