feat: add volume changer

--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -34,6 +34,11 @@
           <button class="audio-player__button prev"><img src="./assets/buttons/back.png" alt="previous"></button>
         </div>
       </div>
+      <div class="audio-player__volume">
+        <button class="audio-player__button volume"><img src="./assets/buttons/volume.png" alt="volume" class="volume-image"></button>
+        <input type="range" class="volume-input" value="10" step="1" max="99">
+      </div>
+      <div class="modal"></div>
     </div>
   </div>
   <script src="script.js"></script>
