feat: add footer

--- a/js30#1.2-audio-player/index.html
+++ b/js30#1.2-audio-player/index.html
@@ -40,6 +40,11 @@
       </div>
       <div class="modal"></div>
     </div>
+      <footer>
+      <a href="https://rs.school/js-stage0/"><img src="./assets/img/rs_school_js.svg" alt="school" class="rsschool"></a>
+      <span class="date">2021</span>
+      <a href="https://github.com/AoiHaru1"> <img class="github" src="./assets/img/GitHub-Mark-Light-64px.png" alt="github"></a>
+      </footer>
   </div>
   <script src="script.js"></script>
 </body>
